src/index/tests/snapshots/rusty__index__tests__instance_resolver_tests__array_instances_are_repeated.snap
---
source: src/index/tests/instance_resolver_tests.rs
expression: "index.find_instances().collect::<Vec<Instance<'_>>>()"
---
[
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
            ],
        },
        VariableIndexEntry {
            name: "MainProg_instance",
            qualified_name: "MainProg",
            initial_value: None,
            argument_type: ByVal(
                Global,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "MainProg",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(6:12 - 6:20),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
            ],
        },
        VariableIndexEntry {
            name: "aFb",
            qualified_name: "MainProg.aFb",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__MainProg_aFb",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(8:8 - 8:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 0,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 1,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "__vtable",
                ),
            ],
        },
        VariableIndexEntry {
            name: "__vtable",
            qualified_name: "fb.__vtable",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__fb___vtable",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: None,
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 0,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 1,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "c",
                ),
            ],
        },
        VariableIndexEntry {
            name: "c",
            qualified_name: "fb.c",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:8 - 3:9),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 0,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 1,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "fb.b",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 2,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:10 - 3:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb1",
                ),
            ],
        },
        VariableIndexEntry {
            name: "aFb1",
            qualified_name: "MainProg.aFb1",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__MainProg_aFb1",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(9:8 - 9:12),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb1",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 2,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 3,
                                    generation: 0,
                                },
                            ),
                        },
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 4,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 5,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "__vtable",
                ),
            ],
        },
        VariableIndexEntry {
            name: "__vtable",
            qualified_name: "fb.__vtable",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__fb___vtable",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: None,
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb1",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 2,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 3,
                                    generation: 0,
                                },
                            ),
                        },
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 4,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 5,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "c",
                ),
            ],
        },
        VariableIndexEntry {
            name: "c",
            qualified_name: "fb.c",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:8 - 3:9),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb1",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 2,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 3,
                                    generation: 0,
                                },
                            ),
                        },
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 4,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 5,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "fb.b",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 2,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:10 - 3:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb3",
                ),
            ],
        },
        VariableIndexEntry {
            name: "aFb3",
            qualified_name: "MainProg.aFb3",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__MainProg_aFb3",
            location_in_parent: 2,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(10:8 - 10:12),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
]
