src/index/tests/snapshots/rusty__index__tests__instance_resolver_tests__array_with_const_instances_are_repeated.snap
---
source: src/index/tests/instance_resolver_tests.rs
expression: "index.find_instances().collect::<Vec<Instance<'_>>>()"
---
[
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
            ],
        },
        VariableIndexEntry {
            name: "MainProg_instance",
            qualified_name: "MainProg",
            initial_value: None,
            argument_type: ByVal(
                Global,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "MainProg",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(6:12 - 6:20),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "size",
                ),
            ],
        },
        VariableIndexEntry {
            name: "size",
            qualified_name: "MainProg.size",
            initial_value: Some(
                Index {
                    index: 2,
                    generation: 0,
                },
            ),
            argument_type: ByVal(
                Local,
            ),
            is_constant: true,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(8:8 - 8:12),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
            ],
        },
        VariableIndexEntry {
            name: "aFb",
            qualified_name: "MainProg.aFb",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__MainProg_aFb",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(11:8 - 11:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 0,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 1,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "__vtable",
                ),
            ],
        },
        VariableIndexEntry {
            name: "__vtable",
            qualified_name: "fb.__vtable",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__fb___vtable",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: None,
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 0,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 1,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "c",
                ),
            ],
        },
        VariableIndexEntry {
            name: "c",
            qualified_name: "fb.c",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:8 - 3:9),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "aFb",
                ),
                ArrayDimensions(
                    [
                        Dimension {
                            start_offset: ConstExpression(
                                Index {
                                    index: 0,
                                    generation: 0,
                                },
                            ),
                            end_offset: ConstExpression(
                                Index {
                                    index: 1,
                                    generation: 0,
                                },
                            ),
                        },
                    ],
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "fb.b",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 2,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:10 - 3:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
]
