src/index/tests/snapshots/rusty__index__tests__instance_resolver_tests__filter_on_variables_are_applied.snap
---
source: src/index/tests/instance_resolver_tests.rs
expression: "index.filter_instances(|it, _|\n!it.is_constant()).collect::<Vec<Instance<'_>>>()"
---
[
    (
        ExpressionPath {
            names: [
                Name(
                    "gFb",
                ),
            ],
        },
        VariableIndexEntry {
            name: "gFb",
            qualified_name: "gFb",
            initial_value: Some(
                Index {
                    index: 0,
                    generation: 0,
                },
            ),
            argument_type: ByVal(
                Global,
            ),
            is_constant: true,
            is_var_external: false,
            data_type_name: "fb",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(12:8 - 12:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
            ],
        },
        VariableIndexEntry {
            name: "MainProg_instance",
            qualified_name: "MainProg",
            initial_value: None,
            argument_type: ByVal(
                Global,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "MainProg",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(6:12 - 6:20),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "rFb",
                ),
            ],
        },
        VariableIndexEntry {
            name: "rFb",
            qualified_name: "MainProg.rFb",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "fb",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(8:8 - 8:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "rFb",
                ),
                Name(
                    "__vtable",
                ),
            ],
        },
        VariableIndexEntry {
            name: "__vtable",
            qualified_name: "fb.__vtable",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "__fb___vtable",
            location_in_parent: 0,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: None,
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "rFb",
                ),
                Name(
                    "a",
                ),
            ],
        },
        VariableIndexEntry {
            name: "a",
            qualified_name: "fb.a",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 1,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:8 - 3:9),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
    (
        ExpressionPath {
            names: [
                Name(
                    "MainProg",
                ),
                Name(
                    "rFb",
                ),
                Name(
                    "b",
                ),
            ],
        },
        VariableIndexEntry {
            name: "b",
            qualified_name: "fb.b",
            initial_value: None,
            argument_type: ByVal(
                Local,
            ),
            is_constant: false,
            is_var_external: false,
            data_type_name: "DINT",
            location_in_parent: 2,
            linkage: Internal,
            binding: None,
            source_location: SourceLocation {
                span: Range(3:10 - 3:11),
                file: Some(
                    "<internal>",
                ),
            },
            varargs: None,
        },
    ),
]
