src/index/tests/snapshots/rusty__index__tests__instance_resolver_tests__functions_blocks_are_not_retrieved.snap
---
source: src/index/tests/instance_resolver_tests.rs
assertion_line: 45
expression: "index.find_instances().collect::<Vec<Instance<'_>>>()"

---
[]
